homepage: Make sure content has margins, even on mobile #223

--- a/OZprivate/scss/content.scss
+++ b/OZprivate/scss/content.scss
@@ -74,7 +74,7 @@ body > header {
   @media screen and (max-width: 1000px) {
     /* Nudge center navbar underneath, let it scroll */
     nav.uk-navbar.uk-navbar-container > .uk-navbar-center {
-      top: calc(100% - 1rem);
+      top: calc(100% - 1.3rem);
       left: 0;
       right: 0;
       transform: none;
@@ -136,7 +136,7 @@ body > footer {
 
   &.shortcuts {
     @extend %oz-background-dark;
-    padding: 1rem 0 !important;
+    padding: 1rem !important;
 
     h3 {
       font-size: 1rem;
@@ -163,7 +163,11 @@ body > footer {
   overflow: hidden; /* contain background */
 
   > .oz-section-body {
-    max-width: 800px;
+    /* max-width is roughly max(80vw, 800px) */
+    max-width: 80vw;
+    @media screen and (min-width: 930px) {
+      max-width: 800px;
+    }
     margin: 1rem auto;
     text-align: center;
   }
@@ -327,6 +331,9 @@ body > footer {
     /* Grid collapsed, so we specify the treeviewer height */
     > div {
       min-height: 58vh;
+    }
+    .uk-grid-small {
+      margin-left: 0; /* margins collapsed, so don't need to nudge over */
     }
   }
 
